# einode

./: Makefile  README.md  erl_home.exs  nimler_node.nimble
einode/: etf.nim
src/: einode.nim  enode.nim
src/einode/: ei.nim
src/nimler_node/: submodule.nim
tests/: Makefile  complex4.exs  test1  test1.nim
tests/c-nodes-example/: .gitignore  Makefile  build.sh  cclient  cnode_ei_client4.nim  cnode_ei_s2.c  cnode_ei_s2.nim  cnode_ei_s3.nim  cnode_ei_s4.nim  cnode_ei_s5.nim  cnode_ei_server4.nim  complex4.exs  cserver  cserver2
tests/c-nodes-example/erts_include/: codec.nim  codec_nif.nim  ei.nim
tests/c_node/: erl_test.c  erl_test.nim  example_client.c  example_server.c
tests/c_node/elixir-c-node-test-master/: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/c_node/elixir-c-node-test-master/cmake/modules/: FindErlang.cmake
tests/c_node/elixir-c-node-test-master/include/erl_test/: dispatchers.h  io.h  sampling.h  spawn.h  utils.h
tests/c_node/elixir-c-node-test-master/src/: CMakeLists.txt  dispatchers.c  erl_test.c  io.c  sampling.c  spawn.c  utils.c
tests/einode-examples/: .gitignore  Makefile  cnode_ei_server1.nim  cnode_ei_server2.nim  complex.exs  complex_test_call.exs  enode_client2  enode_client2.nim  enode_client3.nim  enode_server1  enode_server1.nim  enode_server2  enode_server2.nim  test_server2.sh
